# ui_gtkmm_qt

./: README.md
gtkmm/: CMakeLists.txt
gtkmm/src/: main.cpp
qt/: CMakeLists.txt
qt/include/: uiwindows.h
qt/src/: main.cpp  window.cpp
